[gd_scene load_steps=12 format=3 uid="uid://cma1a5fbul6fx"]

[ext_resource type="Script" path="res://main.gd" id="1_0oxqq"]
[ext_resource type="PackedScene" uid="uid://cptb7ls8q1cxn" path="res://coin.tscn" id="2_aocwb"]
[ext_resource type="Texture2D" uid="uid://cnp5npq8as8x8" path="res://assets/grass.png" id="3_0xxio"]
[ext_resource type="PackedScene" uid="uid://dx65acntec5vc" path="res://powerup.tscn" id="3_nn1dk"]
[ext_resource type="PackedScene" uid="uid://clxt8i65317vo" path="res://player.tscn" id="4_3nrng"]
[ext_resource type="PackedScene" uid="uid://cvqp1s4rrbx7f" path="res://cactus.tscn" id="4_xrmi3"]
[ext_resource type="PackedScene" uid="uid://bqy73f0avum1n" path="res://hud.tscn" id="5_gjgnf"]
[ext_resource type="AudioStream" uid="uid://bggcefdvw1wvu" path="res://assets/audio/Coin.wav" id="6_kyv2j"]
[ext_resource type="AudioStream" uid="uid://bd7ahbchincqk" path="res://assets/audio/Level.wav" id="7_ehlku"]
[ext_resource type="AudioStream" uid="uid://c241r4fc5kf6q" path="res://assets/audio/EndSound.wav" id="8_x6voc"]
[ext_resource type="AudioStream" uid="uid://da3ltvo3up4ru" path="res://assets/audio/Powerup.wav" id="9_cd38h"]

[node name="Main" type="Node"]
script = ExtResource("1_0oxqq")
coin_scene = ExtResource("2_aocwb")
powerup_scene = ExtResource("3_nn1dk")
cactus_scene = ExtResource("4_xrmi3")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0xxio")
stretch_mode = 1
metadata/_edit_group_ = true

[node name="Player" parent="." instance=ExtResource("4_3nrng")]

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_gjgnf")]

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kyv2j")

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ehlku")

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_x6voc")

[node name="PowerUpTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_cd38h")

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
